--- a/src/components/Content/Shop/Filters/Filters.scss
+++ b/src/components/Content/Shop/Filters/Filters.scss
@@ -1,7 +1,7 @@
 .filters {
   display: flex;
   flex: 1 1 auto;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   &__params {
     & select {
